<resources>
    <string name="app_name" translatable="false">AdminMatic</string>
    <string name="version">Version %1$s (PHP %2$s)</string>
    <string name="menu_dots" translatable="false">&#8942;</string>
    <string name="ok">OK</string>
    <string name="update">Update</string>
    <string name="Welcome">Welcome, User!</string>
    <string name="welcome_name">Welcome %1$s!</string>
    <string name="employeeList">Employees List</string>
    <string name="group_text_message">Group Text Message</string>
    <string name="new_employee">New Employee</string>
    <string name="x_active_employees">%1$d Active Employees</string>
    <string name="x_inactive_employees">%1$d Inactive Employees</string>
    <string name="x_active_contracts">%1$d Active Contracts</string>
    <string name="x_active_leads">%1$d Active Leads</string>
    <string name="x_active_vendors">%1$d Active Vendors</string>
    <string name="x_active_items">%1$d Active Items</string>
    <string name="x_active_invoices">%1$d Active Invoices</string>
    <string name="numActiveEmployees"># Active Employees</string>
    <string name="numActiveCustomers"># Active Customers</string>
    <string name="numActiveVendors"># Active Vendors</string>
    <string name="numActiveItems"># Active Items</string>
    <string name="employee">Employee</string>
    <string name="employees">Employees</string>
    <string name="customer">Customer</string>
    <string name="customer_num">Customer #%1$s</string>
    <string name="customers">Customers</string>
    <string name="customer_button" translatable="false">%1$s %2$s</string>
    <string name="vendor">Vendor</string>
    <string name="vendor_balance">Balance = $%1$s</string>
    <string name="vendor_list">Vendor List</string>
    <string name="item">Item</string>
    <string name="item_list">Item List</string>
    <string name="leads">Leads</string>
    <string name="lead">Lead</string>
    <string name="lead_map">Lead Map</string>
    <string name="no_zone">No Zone</string>
    <string name="no_payment_terms">No Payment Terms</string>
    <string name="add">Add</string>
    <string name="usage">Usage</string>
    <string name="licenses">Licenses</string>
    <string name="check">Check</string>
    <string name="camera">Camera</string>
    <string name="library">Library</string>
    <string name="lead_schedule_label">Schedule:</string>
    <string name="add_task">Add Task</string>
    <string name="refresh">Refresh</string>
    <string name="start">Start</string>
    <string name="stop">Stop</string>
    <string name="start_label">Start:</string>
    <string name="stop_label">Stop:</string>
    <string name="reset">Reset</string>
    <string name="uploaded">Uploaded</string>
    <string name="vendor_label">Vendor:</string>
    <string name="quantity_label">Quantity:</string>
    <string name="units">Unit(s)</string>
    <string name="usage_unit_cost">Unit Cost: $</string>
    <string name="usage_total_cost">Total Cost: $</string>
    <string name="receipt">Receipt</string>
    <string name="home">Home</string>
    <string name="today">Today</string>
    <string name="yesterday">Yesterday</string>
    <string name="x_days">%1$s Days</string>
    <string name="todays_payroll">Today\'s Payroll:</string>
    <string name="payroll_break_label">Break:</string>
    <string name="payroll_current_total">Current Total:</string>
    <string name="payroll_week_total">Week Total:</string>
    <string name="payroll_pending_shift">Pending Shift:</string>
    <string name="payroll_excludes_pending">Excludes Pending</string>
    <string name="lead_list">Lead List</string>
    <string name="work_orders">Work Orders</string>
    <string name="invoice">Invoice</string>
    <string name="invoice_list">Invoice List</string>
    <string name="invoices">Invoices</string>
    <string name="performance">Performance</string>
    <string name="history">History</string>
    <string name="images">Images</string>
    <string name="image">Image</string>
    <string name="employee_name">Employee Name</string>
    <string name="employee_ph_number" translatable="false">(401)863.2121</string>
    <string name="employee_email" translatable="false">john@atlantic...den.com</string>
    <string name="equipment_name">Equipment Name</string>
    <string name="equipment_type">Equipment Type</string>
    <string name="equipment_crew">Equipment Crew</string>
    <string name="equipment_detail">Equipment Detail</string>
    <string name="equipment_details">Equipment Details</string>
    <string name="current_service_check">Update Mileage:</string>
    <string name="add_service">Add Service</string>
    <string name="equipment_usage_miles">Total %1$s Miles</string>
    <string name="equipment_usage_km">Total %1$s Km.</string>
    <string name="equipment_usage_hours">Total %1$s Hours</string>
    <string name="service_check_empty">Please input the equipment\'s usage (mileage/engine hours).</string>
    <string name="service_check_less_than_usage_title">Value Less Than Usage</string>
    <string name="service_check_less_than_usage_body">The entered usage value is less than %1$s\'s existing usage value. Are you sure you want to update it?</string>
    <string name="menu_reload_company_data">Reload Company Data</string>
    <string name="menu_departments">Departments</string>
    <string name="menu_privacy_policy">Privacy Policy</string>
    <string name="menu_support">Support</string>
    <string name="customer_name">Customer Name</string>
    <string name="customer_ph_number" translatable="false">(401)863.2121</string>
    <string name="customer_email" translatable="false">john@atlantic...den.com</string>
    <string name="customer_address" translatable="false">123 Any Street</string>
    <string name="customer_contacts">All Contacts</string>
    <string name="customer_documents">Documents</string>
    <string name="customer_notes">Notes &amp; Settings</string>
    <string name="customer_list">Customer List</string>
    <string name="no_image_collection">No Image Collection</string>
    <string name="no_image_collection_error">This customer does not want images collected.</string>
    <string name="add_employee">Add Employee</string>
    <string name="employee_list">Employee List</string>
    <string name="loading">Loading…</string>
    <string name="departments">Departments</string>
    <string name="crews">Crews</string>
    <string name="shifts">Shifts</string>
    <string name="payroll">Payroll</string>
    <string name="login">Log In</string>
    <string name="force_logout">Force Log Out</string>
    <string name="login_to_adminmatic">Log In to Adminmatic</string>
    <string name="remember_me">Remember Me:</string>
    <string name="customers_search">Search Customers</string>
    <string name="schedules_search">Search Schedules</string>
    <string name="items_search">Search Items</string>
    <string name="vendors_search">Search Vendors</string>
    <string name="title_activity_customers_list_tab" translatable="false">customers_list_tab</string>
    <string name="tab_text_1" translatable="false">Tab 1</string>
    <string name="tab_text_2" translatable="false">Tab 2</string>
    <string name="tab_text_3" translatable="false">Tab 3</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_vendor_main">Map</string>
    <string name="title_activity_maps">Map</string>
    <string name="work_order_list"># Work Order(s) List</string>
    <string name="item_name" translatable="false">Pine Bark Mulch</string>
    <string name="item_cost" translatable="false">$45.00/Yard</string>
    <string name="title_activity_item_disp" translatable="false">ItemDisp</string>
    <string name="section_format" translatable="false">Hello World from section: %1$d</string>
    <string name="locate">Locate</string>
    <string name="work_order">Work Order</string>
    <string name="work_order_item">Work Order Item</string>
    <string name="work_order_title" translatable="false">#%1$s - %2$s</string>
    <string name="work_order_number">Work Order #%1$s</string>
    <string name="view_employee_schedule" translatable="false">View ______s Schedule</string>
    <string name="schedule_settings">Schedule Settings</string>
    <string name="yourUsageFrom">Your usage from:</string>
    <string name="qty">Qty</string>
    <string name="date">Date</string>
    <string name="to">to:</string>
    <string name="txt_date" translatable="false">3/13</string>
    <string name="number_qty" translatable="false">0.45</string>
    <string name="searchImageTags">Search Image Tags</string>
    <string name="imagetitle">Image Title</string>
    <string name="add_images">Add Images</string>
    <string name="title_gizmos">gizmos</string>
    <string name="search_forEquipment">Search for Equipment</string>
    <string name="crew">Crew</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="cancel">Cancel</string>
    <string name="select_none">Select None</string>
    <string name="select_all">Select All</string>
    <string name="num" translatable="false">#%1$s</string>
    <string name="type">Type</string>
    <string name="status">Status</string>
    <string name="comma" translatable="false">%1$s, %2$s</string>
    <string name="leads_amount">Leads (%1$d)</string>
    <string name="contracts_amount">Contracts (%1$d)</string>
    <string name="work_orders_amount">W.O. (%1$d)</string>
    <string name="invoices_amount">Invoices (%1$d)</string>
    <string name="usage_hours">%1$s Hours</string>
    <string name="plus_x" translatable="false">+%1$d</string>
    <string name="enter_payroll">Enter Payroll</string>
    <string name="no_time">No Time</string>
    <string name="zero_hours" translatable="false">0.00</string>
    <string name="enter_usage">Enter Usage</string>
    <string name="contract_number">Contract #%1$s</string>
    <string name="contract_list_name" translatable="false">%1$s #%2$s</string>
    <string name="contract_title">Title:</string>
    <string name="contract_charge">Charge:</string>
    <string name="contract_payment">Payment:</string>
    <string name="contract_sales_rep">Sales Rep:</string>
    <string name="contract_notes">Notes:</string>
    <string name="contract_items">Items:</string>
    <string name="contract_sign">Sign</string>
    <string name="contract_includes_any_tax">Includes any Tax</string>
    <string name="contract_customer_button_text" translatable="false">%1$s %2$s</string>
    <string name="contract_charge_nc">NC - No Charge</string>
    <string name="contract_charge_fl">FP - Fixed</string>
    <string name="contract_charge_tm">T&amp;M - Time &amp; Material</string>
    <string name="change_password">Change Password</string>
    <string name="customer_hint">Customer…</string>
    <string name="new_lead_sales_rep_hint">Sales Rep…</string>
    <string name="new_wo_customer">Customer:</string>
    <string name="new_wo_title">Title:</string>
    <string name="new_wo_charge_type">Charge Type:</string>
    <string name="new_wo_invoice_type">Invoice Type:</string>
    <string name="new_wo_schedule_type">Schedule Type:</string>
    <string name="new_wo_options">Options</string>
    <string name="new_wo_unscheduled">Un-scheduled</string>
    <string name="new_wo_department">Department:</string>
    <string name="new_wo_crew">Crew:</string>
    <string name="new_wo_notes">Notes:</string>
    <string name="title_hint">Title…</string>
    <string name="notes_hint">Notes…</string>
    <string name="planned_dates_start_hint">Start…</string>
    <string name="planned_dates_stop_hint">Stop…</string>
    <string name="sysname">sysName</string>
    <string name="addedBy">By:</string>
    <string name="completedDate">On:</string>
    <string name="delete">Delete</string>
    <string name="submit">Submit</string>
    <string name="description">Description:</string>
    <string name="wo_header_name">Name</string>
</resources>