<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/fragment_new_edit_lead">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@id/all_cl"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <!-- Customer -->
        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/customer_cl"
            android:layout_margin="5dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.appcompat.widget.SearchView
                android:id="@+id/customer_search"
                android:layout_width="300dp"
                android:layout_height="40dp"
                android:accessibilityHeading="false"
                android:background="@drawable/text_view_layout"
                app:queryHint="@string/customer_hint"
                app:actionViewClass="android.widget.SearchView"
                app:defaultQueryHint='Select Customer'
                app:iconifiedByDefault="false"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:queryBackground="@null" />

            <TextView
                android:id="@+id/customer_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:text="@string/new_wo_customer"
                android:textSize="14sp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <TextView
            android:id="@+id/title_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:text="@string/new_wo_title"
            android:textSize="14sp"
            app:layout_constraintTop_toBottomOf="@id/customer_cl"
            app:layout_constraintLeft_toLeftOf="parent"
            tools:ignore="RtlHardcoded" />

        <EditText
            android:id="@+id/title_edit_text"
            android:layout_height="40dp"
            android:layout_width="0dp"
            android:layout_margin="5dp"
            android:gravity="center_vertical"
            android:background="@drawable/text_view_layout"
            android:imeOptions="actionDone"
            android:inputType="text"
            android:hint="@string/title_hint"
            app:layout_constraintTop_toBottomOf="@id/title_text"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/sales_rep_cl"
            android:layout_margin="5dp"
            android:paddingTop="15dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/title_edit_text">

            <androidx.appcompat.widget.SearchView
                android:id="@+id/sales_rep_search"
                android:layout_width="300dp"
                android:layout_height="40dp"
                android:accessibilityHeading="false"
                android:background="@drawable/text_view_layout"
                app:queryHint="@string/new_lead_sales_rep_hint"
                app:actionViewClass="android.widget.SearchView"
                app:defaultQueryHint='Select Customer'
                app:iconifiedByDefault="false"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:queryBackground="@null" />

            <TextView
                android:id="@+id/sales_rep_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:text="@string/contract_sales_rep"
                android:textSize="14sp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintGuide_percent="0.5"/>

        <TextView
            android:id="@+id/charge_type_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:text="@string/new_wo_charge_type"
            android:textSize="14sp"
            app:layout_constraintTop_toBottomOf="@id/sales_rep_cl"
            app:layout_constraintLeft_toLeftOf="parent"
            tools:ignore="RtlHardcoded" />

        <Spinner
            android:id="@+id/charge_type_spinner"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:imeOptions="actionDone"
            android:inputType="text"
            android:singleLine="true"
            android:background="@drawable/text_view_layout"
            android:layout_margin="5dp"
            app:layout_constraintTop_toBottomOf="@id/charge_type_text"
            app:layout_constraintRight_toRightOf="@id/guideline"
            app:layout_constraintLeft_toLeftOf="parent"
            />

        <TextView
            android:id="@+id/invoice_type_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:text="@string/new_wo_invoice_type"
            android:textSize="14sp"
            app:layout_constraintTop_toBottomOf="@id/sales_rep_cl"
            app:layout_constraintLeft_toLeftOf="@id/guideline"
            tools:ignore="RtlHardcoded" />

        <Spinner
            android:id="@+id/invoice_type_spinner"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:imeOptions="actionDone"
            android:inputType="text"
            android:singleLine="true"
            android:background="@drawable/text_view_layout"
            android:layout_margin="5dp"
            app:layout_constraintTop_toBottomOf="@id/charge_type_text"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintLeft_toLeftOf="@id/guideline"
            />

        <TextView
            android:id="@+id/schedule_type_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:text="@string/new_wo_schedule_type"
            android:textSize="14sp"
            app:layout_constraintTop_toBottomOf="@id/charge_type_spinner"
            app:layout_constraintLeft_toLeftOf="parent"
            tools:ignore="RtlHardcoded" />

        <EditText
            android:id="@+id/schedule_type_edit_text"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:imeOptions="actionDone"
            android:inputType="text"
            android:singleLine="true"
            android:background="@drawable/text_view_layout"
            android:enabled="false"
            android:text="@string/new_wo_unscheduled"
            android:layout_marginHorizontal="5dp"
            app:layout_constraintTop_toBottomOf="@id/schedule_type_text"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="@id/guideline"
            />

        <EditText
            android:id="@+id/options_edit_text"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:imeOptions="actionDone"
            android:inputType="text"
            android:singleLine="true"
            android:background="@drawable/text_view_layout"
            android:enabled="false"
            android:text="@string/new_wo_options"
            android:layout_marginHorizontal="5dp"
            app:layout_constraintTop_toTopOf="@id/schedule_type_edit_text"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintLeft_toLeftOf="@id/guideline"
            />

        <TextView
            android:id="@+id/department_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:text="@string/new_wo_department"
            android:textSize="14sp"
            app:layout_constraintTop_toBottomOf="@id/schedule_type_edit_text"
            app:layout_constraintLeft_toLeftOf="parent"
            tools:ignore="RtlHardcoded" />

        <Spinner
            android:id="@+id/department_spinner"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:imeOptions="actionDone"
            android:inputType="text"
            android:singleLine="true"
            android:background="@drawable/text_view_layout"
            android:layout_margin="5dp"
            app:layout_constraintTop_toBottomOf="@id/department_text"
            app:layout_constraintRight_toRightOf="@id/guideline"
            app:layout_constraintLeft_toLeftOf="parent"
            />

        <TextView
            android:id="@+id/crew_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:text="@string/new_wo_crew"
            android:textSize="14sp"
            app:layout_constraintTop_toBottomOf="@id/options_edit_text"
            app:layout_constraintLeft_toLeftOf="@id/guideline"
            tools:ignore="RtlHardcoded" />

        <Spinner
            android:id="@+id/crew_spinner"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:imeOptions="actionDone"
            android:inputType="text"
            android:singleLine="true"
            android:background="@drawable/text_view_layout"
            android:layout_margin="5dp"
            app:layout_constraintTop_toBottomOf="@id/crew_text"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintLeft_toLeftOf="@id/guideline"
            />



        <TextView
            android:id="@+id/notes_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:text="@string/new_wo_notes"
            android:textSize="14sp"
            app:layout_constraintTop_toBottomOf="@id/crew_spinner"
            app:layout_constraintLeft_toLeftOf="parent"
            tools:ignore="RtlHardcoded" />

        <EditText
            android:id="@+id/notes_edit_text"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_margin="5dp"
            android:gravity="start"
            android:padding="5dp"
            android:background="@drawable/text_view_layout"
            android:imeOptions="actionDone"
            android:inputType="textMultiLine"
            android:hint="@string/notes_hint"
            app:layout_constraintTop_toBottomOf="@id/notes_text"
            app:layout_constraintBottom_toTopOf="@id/submit_btn"
            app:layout_constraintLeft_toLeftOf="parent"
            />


        <Button
            android:id="@+id/submit_btn"
            android:layout_width="0dp"
            android:layout_height="50dp"

            android:text="@string/submit"
            android:layout_marginHorizontal="5dp"

            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/customer_search_rv"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:visibility="invisible"
            android:background="@color/white"
            app:layout_constraintTop_toBottomOf="@+id/customer_cl"
            app:layout_constraintBottom_toBottomOf="parent"
            />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/sales_rep_search_rv"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:visibility="invisible"
            android:background="@color/white"
            app:layout_constraintTop_toBottomOf="@+id/sales_rep_cl"
            app:layout_constraintBottom_toBottomOf="parent"
            />

    </androidx.constraintlayout.widget.ConstraintLayout>



    <ProgressBar
        android:id="@+id/progress_bar"
        style="@android:style/Widget.DeviceDefault.Light.ProgressBar.Large"
        android:visibility="invisible"
        android:layout_width="76dp"
        android:layout_height="76dp"
        android:layout_marginStart="100dp"
        android:layout_marginTop="100dp"
        android:layout_marginEnd="100dp"
        android:layout_marginBottom="100dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:indeterminate="true"
        android:indeterminateTintMode="src_atop"
        android:indeterminateTint="@color/button"
        />
</androidx.constraintlayout.widget.ConstraintLayout>